# ubuntukylin-theme

./: Makefile  README.md  meson.build  ukui-custom.xml
blue-crystal/: Makefile  cursors.sh
blue-crystal/cursors/: X_cursor  bd_double_arrow  bottom_right_corner  bottom_side  bottom_tee  circle  color-picker  copy  cross  crossed_circle  crosshair  dnd-ask  dnd-copy  dnd-link  dnd-move  dnd-none  dotbox  fd_double_arrow  grabbing  hand2  left_ptr  left_ptr_watch  left_side  left_tee  link  ll_angle  lr_angle  move  pencil  plus  question_arrow  right_ptr  right_side  right_tee  sb_down_arrow  sb_h_double_arrow  sb_left_arrow  sb_right_arrow  sb_up_arrow  sb_v_double_arrow  (+10 more)
dark-sense/: cursors.sh
debian/: 25_ubuntukylin-theme.gschema.override  README.Debian  changelog  control  copyright  dirs  files  postinst  rules  ubuntukylin-theme.install  ubuntukylin-theme.postinst  ubuntukylin-theme.postrm  ubuntukylin-theme.prerm  ubuntukylin-theme.xml
kylin-icon-theme/: index.theme
ubuntukylin-grub-theme/: IcePhoenix.tga  ubuntu_kylin_grub_bg.tga
ubuntukylin-icon-theme/: index.theme
ubuntukylin-theme/: index.theme
ukui-black/: .Makefile.swp
ukui-black-unity/: Makefile  index.theme.in
ukui-blue/: Makefile  index.theme.in
ukui-dark/: index.theme.in
ukui-icon-theme/: index.theme
ukui-icon-theme-basic/: index.theme
ukui-icon-theme-classical/: index.theme
ukui-icon-theme-default/: index.theme
ukui-icon-theme-one/: index.theme
ukui-icon-theme-unity/: index.theme
ukui-traditional/: index.theme.in
ukui-white-unity/: Makefile  index.theme.in
(+149 files in other folders)
